fixed styling of embedded video on mobile view

--- a/src/sections/Youtube/YouTubeStyles.module.css
+++ b/src/sections/Youtube/YouTubeStyles.module.css
@@ -14,4 +14,11 @@
     border-radius: 12px;
   }
   
+
+  @media (width <= 800px) {
+    .iframe {
+      width: 350px;
+      height: 210px;
+    }
+  }
   
